# Simple-MFT-Parser

./: CMakeLists.txt  LICENSE  README.md  TODO.md
include/: mft.hpp  mft_parser.hpp
include/utils/: logger.hpp  windows.hpp
src/: main.cpp  mft.cpp  mft_parser.cpp
src/utils/: CMakeLists.txt  logger.cpp
